# td_baseline

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  explore_pstr.ipynb  pyproject.toml
docker/: Dockerfile  base.requirements.txt
notebooks/: eval.ipynb  test.ipynb  visualize_extract_bboxes.ipynb  xp_threshold_weight.ipynb  xp_weight_baseline.ipynb
scripts/: README.md  append_pstr_json_with_pedes.py  evaluate.py  evaluate_all.py  evaluate_alpha.py  evaluate_detection_reid.py  evaluate_detection_text.py  evaluate_dreid.py  evaluate_dreid_clip.py  evaluate_experiments.py  evaluate_reid_standard.py  evaluate_tdreid.py  evaluate_text_frame.py  evaluate_text_reid.py  evaluate_textonly.py  evaluate_textonly_tponly.py  evaluate_treid.py  evaluate_treid_annotations.py  evaluate_treid_tponly.py  generate_all.py  generate_bboxes_clip_features_from_detections.py  generate_captions_output.py  generate_crop_index_to_features_text.py  generate_crops_features_from_annotations.py  generate_crops_features_from_detections.py  generate_crops_features_from_file.py  generate_crops_features_from_files.py  generate_detection.py  generate_detection_output.py  generate_detection_reid_features.py  generate_features.py  generate_features_image_annotations.py  generate_features_image_crop.py  generate_features_image_detections.py  generate_frame_id_to_detections.py  generate_json_mm.py
src/: clip.py  compute_similarities.py  cuhk_sysu_pedes.py  data_struct.py  detections_generation.py  eval.py  features_generation.py  inference.py  models.py  pstr.py  tokenizer.py  (+2 more)
(+52 files in other folders)
